--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "test": "node --test",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:unit": "TEST_SCOPE=unit vitest run",
+    "test:integration": "TEST_SCOPE=integration vitest run",
     "format": "prettier --write .",
-    "format:check": "prettier --check .",
-    "lint": "npm run format && eslint . --ext .js,.jsx,.ts,.tsx",
-    "lint:ci": "npm run format:check && eslint . --ext .js,.jsx,.ts,.tsx",
-    "deploy-test": "npx vercel build",
+    "ci:format-check": "prettier --check .",
+    "ci:lint": "npm run ci:format-check && eslint . --ext .js,.jsx,.ts,.tsx",
+    "ci:deploy": "npx vercel build",
     "lint-staged": "lint-staged",
-    "semgrep:ci": "docker run --rm -v \"$PWD\":/src -w /src returntocorp/semgrep semgrep --config semgrep/mrpa.yml --error",
+    "ci:semgrep": "docker run --rm -v \"$PWD\":/src -w /src returntocorp/semgrep semgrep --config semgrep/mrpa.yml --error",
     "prepush:test": ".husky/pre-push",
     "prepare": "husky"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.75.0",
     "next": "15.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -25,18 +28,21 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^20.19.21",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@typescript-eslint/eslint-plugin": "^8.46.0",
     "@typescript-eslint/parser": "^8.46.0",
+    "dotenv": "^17.2.3",
+    "dotenv-expand": "^12.0.3",
     "eslint": "^9.37.0",
     "eslint-config-next": "^15.5.4",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.3",
     "prettier": "^3.6.2",
     "tailwindcss": "^4",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "*.{ts,tsx,js,jsx}": [
