supabaseのコマンドを定義した

--- a/package.json
+++ b/package.json
@@ -11,13 +11,28 @@
     "test:unit": "TEST_SCOPE=unit vitest run",
     "test:integration": "TEST_SCOPE=integration vitest run",
     "format": "prettier --write .",
-    "ci:format-check": "prettier --check .",
-    "ci:lint": "npm run ci:format-check && eslint . --ext .js,.jsx,.ts,.tsx",
+    "format:check": "prettier --check .",
+    "ci:lint": "npm run format:check && eslint . --ext .js,.jsx,.ts,.tsx",
     "ci:deploy": "npx vercel build",
     "lint-staged": "lint-staged",
     "ci:semgrep": "docker run --rm -v \"$PWD\":/src -w /src returntocorp/semgrep semgrep --config semgrep/mrpa.yml --error",
     "prepush:test": ".husky/pre-push",
-    "prepare": "husky"
+    "prepare": "husky",
+    "supabase:start": "supabase start",
+    "supabase:stop": "supabase stop",
+    "supabase:restart": "npm run supabase:stop || true && npm run supabase:start",
+    "supabase:status": "supabase status",
+    "supabase:db:pull": "supabase db pull \"sync_from_cloud\"",
+    "supabase:db:push_local": "supabase db push --local",
+    "supabase:db:push_supabase": "supabase db push",
+    "supabase:db:diff": "supabase db diff --linked",
+    "supabase:db:reset": "supabase db reset --local --yes",
+    "supabase:db:dump": "mkdir -p supabase/tmp && supabase db dump --local > supabase/tmp/schema_dump.sql && echo '✅ スキーマ情報を書き出しました → supabase/tmp/schema_dump.sql'",
+    "supabase:db:migration:file_history": "ls -1 supabase/migrations || echo '⚠️ migrations ディレクトリが存在しません'",
+    "supabase:db:migration:dump": "mkdir -p supabase/tmp && echo '📜 マイグレーションDDL履歴一覧' > supabase/tmp/migration_ddl_history.sql && echo '--------------------------------' >> supabase/tmp/migration_ddl_history.sql && for f in $(ls supabase/migrations/*.sql | sort); do echo \"\\n▶ $f\" >> supabase/tmp/migration_ddl_history.sql; echo '--------------------------------' >> supabase/tmp/migration_ddl_history.sql; cat \"$f\" >> supabase/tmp/migration_ddl_history.sql; echo '\\n' >> supabase/tmp/migration_ddl_history.sql; done || echo '⚠️ supabase/migrations が存在しません' >> supabase/tmp/migration_ddl_history.sql && echo '✅ DDL履歴を書き出しました → supabase/tmp/migration_ddl_history.sql'",
+    "supabase:db:migration:create": "node scripts/create_migration.sh",
+    "supabase:db:table:schema": "./scripts/show_table_schema.sh",
+    "supabase:db:table:list": "./scripts/list_tables.sh"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.75.0",
