--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "test:unit": "TEST_SCOPE=unit vitest run",
     "test:integration": "TEST_SCOPE=integration vitest run",
     "format": "prettier --write .",
+    "lint-fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format:check": "prettier --check .",
     "ci:lint": "npm run format:check && eslint . --ext .js,.jsx,.ts,.tsx",
     "ci:deploy": "npx vercel build",
     "lint-staged": "lint-staged",
     "ci:semgrep": "docker run --rm -v \"$PWD\":/src -w /src returntocorp/semgrep semgrep --config semgrep/mrpa.yml --error",
-    "prepush:test": ".husky/pre-push",
-    "prepare": "husky",
+    "ci:all": ".husky/pre-push",
     "supabase:start": "supabase start",
     "supabase:stop": "supabase stop",
     "supabase:restart": "npm run supabase:stop || true && npm run supabase:start",
