--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "supabase:db:table:list": "./scripts/list_tables.sh"
   },
   "dependencies": {
+    "@faker-js/faker": "^10.1.0",
     "@supabase/supabase-js": "^2.75.0",
     "jp-prefecture": "^0.2.1",
     "next": "15.5.4",
